; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat.c_procstat_getumask_core.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat.c_procstat_getumask_core.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.procstat_core = type { i32 }

@PSC_TYPE_UMASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.procstat_core*, i16*)* @procstat_getumask_core to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @procstat_getumask_core(%struct.procstat_core* %0, i16* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.procstat_core*, align 8
  %5 = alloca i16*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i16*, align 8
  store %struct.procstat_core* %0, %struct.procstat_core** %4, align 8
  store i16* %1, i16** %5, align 8
  %8 = load %struct.procstat_core*, %struct.procstat_core** %4, align 8
  %9 = load i32, i32* @PSC_TYPE_UMASK, align 4
  %10 = call i16* @procstat_core_get(%struct.procstat_core* %8, i32 %9, i32* null, i64* %6)
  store i16* %10, i16** %7, align 8
  %11 = load i16*, i16** %7, align 8
  %12 = icmp eq i16* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %26

14:                                               ; preds = %2
  %15 = load i64, i64* %6, align 8
  %16 = icmp ult i64 %15, 2
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i16*, i16** %7, align 8
  %19 = call i32 @free(i16* %18)
  store i32 -1, i32* %3, align 4
  br label %26

20:                                               ; preds = %14
  %21 = load i16*, i16** %7, align 8
  %22 = load i16, i16* %21, align 2
  %23 = load i16*, i16** %5, align 8
  store i16 %22, i16* %23, align 2
  %24 = load i16*, i16** %7, align 8
  %25 = call i32 @free(i16* %24)
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %20, %17, %13
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i16* @procstat_core_get(%struct.procstat_core*, i32, i32*, i64*) #1

declare dso_local i32 @free(i16*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
